--- a/targets/x86_64/iso/boot/.gitignore
+++ b/targets/x86_64/iso/boot/.gitignore
@@ -1,22 +1,1 @@
-# Build-Dateien
-build/
-dist/
-*.o
-*.bin
-*.iso
-
-# IDE-Dateien
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# macOS-Dateien
-.DS_Store
-
-# Docker-Dateien
-.dockerignore
-
-# Temporäre Dateien
-*.tmp
-*.temp
+boot/kernel.bin
