--- a/targets/x86_64/iso/boot/grub/grub.cfg
+++ b/targets/x86_64/iso/boot/grub/grub.cfg
@@ -1,7 +1,8 @@
 set timeout=0
 set default=0
+terminal_output console
 
-menuentry "carlOS"{
+menuentry "CarlOS" {
     multiboot2 /boot/kernel.bin
     boot
 }
